# py-gitea-opensuse-org

./: README.md  pyproject.toml  test-requirements.txt  tox.ini
.openapi-generator/: FILES
docs/: APIError.md  AccessToken.md  ActionArtifact.md  ActionArtifactsResponse.md  ActionRunner.md  ActionRunnerLabel.md  ActionRunnersResponse.md  ActionTask.md  ActionTaskResponse.md  ActionVariable.md  ActionWorkflow.md  ActionWorkflowJob.md  ActionWorkflowJobsResponse.md  ActionWorkflowResponse.md  ActionWorkflowRun.md  ActionWorkflowRunsResponse.md  ActionWorkflowStep.md  Activity.md  ActivityPub.md  ActivitypubApi.md  AddCollaboratorOption.md  AddTimeOption.md  AdminApi.md  AnnotatedTag.md  AnnotatedTagObject.md  ApplyDiffPatchFileOptions.md  Attachment.md  Badge.md  Branch.md  BranchProtection.md  ChangeFileOperation.md  ChangeFilesOptions.md  ChangedFile.md  CombinedStatus.md  Comment.md  Commit.md  CommitAffectedFiles.md  CommitDateOptions.md  CommitMeta.md  CommitStats.md  (+182 more)
py_gitea_opensuse_org/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
test/: test_access_token.py  test_action_artifact.py  test_action_artifacts_response.py  test_action_runner.py  test_action_runner_label.py  test_action_runners_response.py  test_action_task.py  test_action_task_response.py  test_action_variable.py  test_action_workflow.py  test_action_workflow_job.py  test_action_workflow_jobs_response.py  test_action_workflow_response.py  test_action_workflow_run.py  test_action_workflow_runs_response.py  test_action_workflow_step.py  test_activity.py  test_activity_pub.py  (+204 more)
(+228 files in other folders)
