[tool.poetry]
name = "py_gitea_opensuse_org"
version = "1.19.3"
description = "Gitea API."
authors = ["OpenAPI Generator Community <team@openapitools.org>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/dcermak/py-gitea-opensuse-org"
keywords = ["OpenAPI", "OpenAPI-Generator", "Gitea API."]
include = ["py_gitea_opensuse_org/py.typed"]

[tool.poetry.dependencies]
python = "^3.7"

urllib3 = ">= 1.25.3"
python-dateutil = ">=2.8.2"
aiohttp = ">= 3.8.4"
pydantic = "^1.10.5, <2"
aenum = ">=3.1.11"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.1"
tox = ">=3.9.0"
flake8 = ">=4.0.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
